Update Sedifex branding for Africa-wide AI focus

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Sedifex Blog"
-description: "Updates about the Ghana market and Sedifex stores."
+description: "Updates about Sedifex's AI inventory system and retail growth across Africa."
 baseurl: ""          # keep empty since it's a custom domain
 og_image: "/assets/og-default.png"
 og_image_alt: "Sedifex gradient logo on a midnight blue background"
