--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,9 @@ title: "Sedifex Inventory App Blog"
 description: "Insights and resources from the Sedifex Inventory App team"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://blog.sedifex.com" # your custom domain
+lang: en
+author: "Sedifex Team"
+logo: "https://i.imgur.com/mcrrGfd.png"
 theme: minima
 header_pages:
   - about.md
