--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Sedifex Inventory App Blog"
-description: "Insights and resources from the Sedifex Inventory App team"
+description: "Sedifex is a modern inventory system in Ghana and Africa for shops, pharmacies, kiosks, and growing businesses."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://blog.sedifex.com" # your custom domain
 lang: en
